compiler/tests/compile-error/missing-module.arret
(import [package does not exist]) ;~ ERROR package not found
(import [stdlib module does not exist]) ;~ ERROR module not found